--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href='../css/app.css' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/dist/bundle.css">
   </head>
   <body>
     <div id="content"></div>
