--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/dist/bundle.css">
+    <link rel="stylesheet" href="../dist/admin.css">
   </head>
   <body>
     <div id="content"></div>
-    <script src="../dist/bundle.js"></script>
+    <script src="../dist/admin.js"></script>
   </body>
 </html>
