--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
   <div class="background-yellow">
     <div class="image-container center-block">
       <img class="center-block" src="../images/introduction_main.png">
-      <div class="download">
+      <a href="/plusone.apk" class="download">
         <img src="../images/download.png">
-      </div>
+      </a>
     </div>
   </div>
   <img class="center-block" src="../images/introduction_1.png">
@@ -31,8 +31,7 @@
     <p>©2015北京思无疆科技有限公司</p>
     <p> 京ICP备XXXXXXXX号</p>
   </div>
-</body>
-<script src="../dist/app.js"></script>
+  <script src="../dist/app.js"></script>
 </body>
 
 </html>
