--- a/public/index.html
+++ b/public/index.html
@@ -4,33 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="../css/app.css">
+  <link rel="stylesheet" href="../dist/app.css">
   <title>加一APP</title>
 </head>
 
 <body>
-  <img class="center-block" src="../images/title.png">
-  <div class="background-yellow">
-    <div class="image-container center-block">
-      <img class="center-block" src="../images/introduction_main.png">
-      <a href="/plusone.apk" class="download">
-        <img src="../images/download.png">
-      </a>
-    </div>
-  </div>
-  <img class="center-block" src="../images/introduction_1.png">
-  <div class="background-grey">
-    <img class="center-block" src="../images/introduction_2.png">
-  </div>
-  </div>
-  <img class="center-block" src="../images/introduction_3.png">
-  <div class="background-grey">
-    <img class="center-block" src="../images/introduction_4.png">
-  </div>
-  <div class="foot">
-    <p>©2015北京思无疆科技有限公司</p>
-    <p> 京ICP备XXXXXXXX号</p>
-  </div>
+  <div id="content"></div>
   <script src="../dist/app.js"></script>
 </body>
 
