Add download web description, keyword, ICP

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="keywords" content="加一，+1，娱乐，社交, APP, 流行，聊天，传播">
+  <meta name="description" content="加一 可以发现有趣的娱乐话题，大家看什么我决定，和大家一起聊天吧，一起玩+1">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="../dist/app.css">
   <title>加一APP</title>
